--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@ h1{
   font-size: 50px;
 
 }
+h2{
+  font-size: 40px;
+}
 .color{
   color:orange;
 }
-section{
+.flexible-container{
   display: flex;
   padding-bottom: 150px;
+  
 }
 .half-width{
   width:50%;
@@ -38,4 +42,28 @@ section{
   background-repeat: no-repeat;
   background-position: right;
   padding-right: 10px;
+}
+.experience{
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+
+}
+.experience-item{
+  
+  box-shadow: 10px 10px 40px gray;
+  width:40%;
+  margin-right: 5%;
+  margin-left: 5%;
+  padding-left: 20px;
+  border-radius: 5px;
+}
+#full-stack{
+  border-left: 5px solid tomato;
+}
+#baby-web{
+  border-left:5px solid blue ;
+}
+footer p{
+  text-align: center;
 }
